# ESP_Project

firmware/FT_gateway/: .gitignore  sdkconfig.defaults
firmware/FT_gateway/components/hardware/: CMakeLists.txt  idf_component.yml
firmware/FT_gateway/components/hardware/include/: hal_gpio.h
firmware/FT_gateway/components/irrigator/: CMakeLists.txt  idf_component.yml  irrigator.c  pipeWorker.c
firmware/FT_gateway/components/irrigator/include/: irrigator.h  pipeWorker.h  uart_sensorUmidity.h
firmware/FT_gateway/components/irrigator/src/: pipeWorker.c  uart_sensorUmidity.c
firmware/FT_gateway/components/nvs/: CMakeLists.txt  idf_component.yml
firmware/FT_gateway/components/nvs/include/: hal_memory.h
firmware/FT_gateway/components/nvs/src/: hal_memory.c
firmware/FT_gateway/components/personal_hal/: CMakeLists.txt  idf_component.yml
firmware/FT_gateway/components/personal_hal/include/: hal_memory.h
firmware/FT_gateway/components/personal_hal/src/: hal_gpio.c
firmware/FT_gateway/components/projectConfig/: CMakeLists.txt  idf_component.yml  projectConfig.h  tasks_common.h
firmware/FT_gateway/components/webServer/: CMakeLists.txt  idf_component.yml
firmware/FT_gateway/components/webServer/include/: httpServer.h  m_dns.h  router.h  wifiApp.h
firmware/FT_gateway/components/webServer/src/: httpServer.c  m_dns.c  router.c  wifiApp.c
firmware/FT_gateway/components/webServer/webPage/: app.css  app.html  app.js  historico.html  index.html
firmware/FT_gateway/main/: CMakeLists.txt  dateTimeNTP.c  displayOled.c  displayOled.h  hal_gpio.h  httpServer.c  httpServer.h  irrigator.c  irrigator.h  ledRGB.c  ledRGB.h  main.c  pipeWorker.c  pipeWorker.h  projectConfig.h  router.c  tasks_common.h  wifiApp.c  wifiApp.h
firmware/FT_gateway/main/webPage/: app.html  index.html
